Fix footer padding and alignment

--- a/style.css
+++ b/style.css
@@ -143,6 +143,6 @@ button {
 
 .footer {
     background-color: #1f2937;
-    padding: 50px 750px
-    
+    padding: 50px;
+    text-align: center;  
 }
